Fix z-index and slow jQuery loading problem

--- a/trunk/s/main.css
+++ b/trunk/s/main.css
@@ -16,5 +16,5 @@
   text-align: left;
   font-size: 10px;
   font-family: 'courier';
-  color: #ccc;
+  color: #aaa;
 }
